# akaii-graphrag

./: .env  .surrealdb  Cargo.toml  Containerfile.dev  build.rs  compose.dev.yaml
.devcontainer/: devcontainer.json
events/: entity_changed.surql
migrations/: 20250219_175314_GrafanaUser.surql
migrations/definitions/: _initial.json
protos/: feeder.proto  searcher.proto
schemas/: _input_article_mentions_.surql  _input_articles_.surql  _table_disambiguations_.surql  entity.surql  entity_history.surql  input_article.surql  input_article_chunk.surrealql
src/: app_state.rs  disambiguator_system.txt  feeder_service.rs  main.rs  routes.rs  searcher_service.rs  shared_types.rs  triplett_system.txt
src/feeder_service/: disambiguator.rs  feed_prompt.txt
src/routes/: feed.rs
