[package]
name = "akaii-graphrag"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tonic-web = "0.12.2"
chrono = "0.4.38"
ollama-rs = { version = "0.2.1", features = ["stream"] }
axum = "0.7.5"
axum-extra = "0.9.3"
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio-stream = "0.1.16"
axum-macros = "0.4.1"
anyhow = "1.0.89"
uuid = { version = "1.10.0", features = [
    "v4",
    "v5",
    "serde",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
surrealdb = "2.0.2"
tonic-types = "0.12.3"
prost-types = "0.13.3"
prost-derive = "0.13.3"

[build-dependencies]
tonic-build = "0.12"
